tests/ui/infer/generic_override_bug2.stderr
error: mismatch types
   ╭─[tests/ui/infer/generic_override_bug2.ina:9:17]
   │
 9 │         None => {},
   │                 ╶╮
   │                  ╰── expected `i64`, found `()`
   ∙
───╯
error: mismatch types
    ╭─[tests/ui/infer/generic_override_bug2.ina:13:17]
    │
 13 │         None => {},
    │                 ╶╮
    │                  ╰── expected `i32`, found `()`
    ∙
────╯
